--- a/Express/package.json
+++ b/Express/package.json
@@ -13,6 +13,7 @@
   "author": "Swan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "express": "^4.14.1"
   },
   "devDependencies": {
