--- a/Express/package.json
+++ b/Express/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "mongodb": "^2.2.22"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
