--- a/Express/package.json
+++ b/Express/package.json
@@ -13,6 +13,8 @@
   "author": "Swan",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.6.1",
+    "angular-route": "^1.6.1",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "mongodb": "^2.2.22",
