--- a/Express/package.json
+++ b/Express/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-route": "^1.6.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "mongodb": "^2.2.22",
